i did somethings with flexbox in this commit

--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
         </ul>
       </nav>
     </header>
+    <!-- flexbox  -->
+    <div class="container">
+      <div class="items-1 item">1</div>
+      <div class="items-2 item">2</div>
+      <div class="items-3 item">3</div>
+      <div class="items-4 item">4</div>
+      <div class="items-5 item">5</div>
+    </div>
   </body>
 </html>
